[BUGFIX] <th> text-align center

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -28,6 +28,10 @@ html, body {
   min-height: 100%;
 }
 
+th {
+  text-align: center;
+}
+
 .overlay {
   position: fixed;
   top: 0;
